--- a/resources/web/dashboard.css
+++ b/resources/web/dashboard.css
@@ -8,6 +8,8 @@ body {
 }
 
 
+
+
 /*
  * Global add-ons
  */
@@ -37,7 +39,7 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
+    background-color: #222222;;
     border-right: 1px solid #eee;
   }
 }
