Lots of changes and prettying it up.
Former-commit-id: fee348c273c9dac164256ff6dcdd4e87084db2c9

--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -7,7 +7,14 @@ body {
   padding-top: 50px;
 }
 
+.announcement-heading {
+  font-size: 50px;
+  margin: 0;
+}
 
+.announcement-text {
+  margin: 0;
+}
 
 
 /*
