--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -3,8 +3,45 @@
  */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
-body {
+/*body {
   padding-top: 50px;
+}*/
+
+
+
+.mini-submenu{
+  display:none;  
+  background-color: rgba(0, 0, 0, 0.9);  
+  border: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 4px;
+  padding: 9px;  
+  /*position: relative;*/
+  width: 42px;
+
+}
+
+.mini-submenu:hover{
+  cursor: pointer;
+}
+
+.mini-submenu .icon-bar {
+  border-radius: 1px;
+  display: block;
+  height: 2px;
+  width: 22px;
+  margin-top: 3px;
+}
+
+.mini-submenu .icon-bar {
+  background-color: #999;
+}
+
+#slide-submenu{
+  background: rgba(0, 0, 0, 0.45);
+  display: inline-block;
+  padding: 0 8px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .announcement-heading {
@@ -16,6 +53,9 @@ body {
   margin: 0;
 }
 
+.sidebar {
+  padding-left: 40px;
+}
 
 /*
  * Global add-ons
@@ -32,9 +72,6 @@ body {
  */
 
 /* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
@@ -46,40 +83,26 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #222222;;
-    border-right: 1px solid #eee;
+    /*background-color: #f5f5f5;*/
+    /*border-right: 1px solid #eee;*/
   }
 }
 
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #428bca;
-}
 
 
 /*
  * Main content
  */
 
-.main {
+/*.main {
   padding: 20px;
-}
-@media (min-width: 768px) {
+}*/
+/*@media (min-width: 768px) {
   .main {
     padding-right: 40px;
     padding-left: 40px;
   }
-}
+}*/
 .main .page-header {
   margin-top: 0;
 }
