--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -2,66 +2,69 @@
  * Base structure
  */
 
-/* Move down content because we have a fixed navbar that is 50px tall */
+ /* Move down content because we have a fixed navbar that is 50px tall */
 /*body {
   padding-top: 50px;
-}*/
+  }*/
 
+  /*dropdown hover*/
+  ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block;    
+  }
 
+  .mini-submenu{
+    display:none;  
+    background-color: rgba(0, 0, 0, 0.6);  
+    border: 1px solid rgba(0, 0, 0, 0.9);
+    border-radius: 4px;
+    padding: 9px;  
+    /*position: relative;*/
+    width: 42px;
 
-.mini-submenu{
-  display:none;  
-  background-color: rgba(0, 0, 0, 0.6);  
-  border: 1px solid rgba(0, 0, 0, 0.9);
-  border-radius: 4px;
-  padding: 9px;  
-  /*position: relative;*/
-  width: 42px;
+  }
 
-}
+  .mini-submenu:hover{
+    cursor: pointer;
+  }
 
-.mini-submenu:hover{
-  cursor: pointer;
-}
+  .mini-submenu .icon-bar {
+    border-radius: 1px;
+    display: block;
+    height: 2px;
+    width: 22px;
+    margin-top: 3px;
+  }
 
-.mini-submenu .icon-bar {
-  border-radius: 1px;
-  display: block;
-  height: 2px;
-  width: 22px;
-  margin-top: 3px;
-}
+  .mini-submenu .icon-bar {
+    background-color: #999;
+  }
 
-.mini-submenu .icon-bar {
-  background-color: #999;
-}
+  #slide-submenu{
+    background: rgba(0, 0, 0, 0.45);
+    display: inline-block;
+    padding: 0 8px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 
-#slide-submenu{
-  background: rgba(0, 0, 0, 0.45);
-  display: inline-block;
-  padding: 0 8px;
-  border-radius: 4px;
-  cursor: pointer;
-}
+  .announcement-heading {
+    font-size: 50px;
+    margin: 0;
+  }
 
-.announcement-heading {
-  font-size: 50px;
-  margin: 0;
-}
+  .announcement-text {
+    margin: 0;
+  }
 
-.announcement-text {
-  margin: 0;
-}
-
-.sidebar {
-  padding-left: 40px;
-}
+  .sidebar {
+    padding-left: 40px;
+  }
 
 /*
  * Global add-ons
  */
 
-.sub-header {
+ .sub-header {
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
 }
@@ -71,8 +74,8 @@
  * Sidebar
  */
 
-/* Hide for mobile, show later */
-@media (min-width: 768px) {
+ /* Hide for mobile, show later */
+ @media (min-width: 768px) {
   .sidebar {
     position: fixed;
     top: 51px;
@@ -96,23 +99,23 @@
 
 /*.main {
   padding: 20px;
-}*/
+  }*/
 /*@media (min-width: 768px) {
   .main {
     padding-right: 40px;
     padding-left: 40px;
   }
-}*/
-.main .page-header {
-  margin-top: 0;
-}
+  }*/
+  .main .page-header {
+    margin-top: 0;
+  }
 
 
 /*
  * Placeholder dashboard ideas
  */
 
-.placeholders {
+ .placeholders {
   margin-bottom: 30px;
   text-align: center;
 }
