Much better bid/ask/buy forms

--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -11,6 +11,9 @@
   ul.nav li.dropdown:hover > ul.dropdown-menu {
     display: block;    
   }
+  .input-group-addon {
+    background-color: #505050;
+  }
 
   .mini-submenu{
     display:none;  
