Added some creator pages
Former-commit-id: c88850494d3ad781fbb39f1bd9e51a1f8d13ebff

--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -51,12 +51,17 @@
   }
 
   .announcement-heading {
-    font-size: 50px;
+    font-size: 40px;
     margin: 0;
   }
 
-  .announcement-text {
+  .announcement-text,  {
     margin: 0;
+    font-size: 12px;
+
+  }
+  .announcement-bottom {
+    font-size: 14px;
   }
 
   .sidebar {
@@ -143,5 +148,5 @@
 }
 
 .btn {
-    margin: 3px;
+  margin: 3px;
 }
