A little better formatting of the creator overview
Former-commit-id: f13ae8078fc05d0a80d877167a20cc4132a55015

--- a/resources/web/userdashboard.css
+++ b/resources/web/userdashboard.css
@@ -86,7 +86,7 @@
  @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 60px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -97,6 +97,24 @@
     /*background-color: #f5f5f5;*/
     /*border-right: 1px solid #eee;*/
   }
+
+  .right-sidebar {
+    position: relative;
+    float:right;
+    top: 51px;
+    bottom: 0;
+    /*right: 0;*/
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    /*overflow-y: auto; */
+    /* Scrollable contents if viewport is shorter than content. */
+    /*background-color: #f5f5f5;*/
+    /*border-right: 1px solid #eee;*/
+  }
+
+
 }
 
 
