changes to main page

--- a/resources/stage/web/userdashboard.css
+++ b/resources/stage/web/userdashboard.css
@@ -6,12 +6,36 @@
 /*body {
   padding-top: 50px;
   }*/
+
+  @font-face {
+    font-family: 'Glyphicons Halflings';
+    src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot');
+    src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
+    url('bootstrap-dist/fonts/glyphicons-halflings-regular.woff') format('woff'), 
+    url('bootstrap-dist/fonts/glyphicons-halflings-regular.ttf') format('truetype'), 
+    url('bootstrap-dist/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  }
+  .navbar-input-group {
+    font-size: 0px; /*removes whitespace between button and input*/
+  }
+
+  .navbar-input-group input {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .navbar-input-group .btn {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: 0px;
+  }
   .pager {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-right: 0px;
     margin-left: 0px;
   }
+
+
   .table {
     font-size: .85em;
   }
@@ -181,3 +205,69 @@
 .btn {
   margin: 3px;
 }
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  height: 500px;
+  margin-bottom: 60px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
+
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: normal;
+}
+.marketing .col-lg-4 p {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+.carousel-body {
+  padding-bottom: 40px;
+  color: #DBDBDB; ;
+  background-color: #222222;
+}
+  
