Getting a basic FAQ page

--- a/resources/stage/web/userdashboard.css
+++ b/resources/stage/web/userdashboard.css
@@ -10,115 +10,134 @@
     margin-left: 18px;
      margin-right: 18px;
 
-  }*/
-  #midCol.affix-top {
-    position:fixed;
-    margin-left:-18px;
-    margin-right:10px;
-  }
+     }*/
 
-  #midCol.affix-bottom {
-    position:static;
-  }
+     .nav-list {
+      width: 228px;
+      margin: 30px 0 0;
+      padding: 0;
+      background-color: #202020;
+      -webkit-border-radius: 6px;
+      -moz-border-radius: 6px;
+      border-radius: 6px;
+      -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+      -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+      box-shadow: 0 1px 4px rgba(0,0,0,.065);
+    }
+    .nav-list > .active > a, .nav-list > .active > a:hover, .nav-list > .active > a:focus {
+      color: #ffffff;
+      text-shadow: 0 -1px 0 
+      rgba(0, 0, 0, 0.2);
+      background-color: #0088cc;
+    }
+    #midCol.affix-top {
+      position:fixed;
+      margin-left:-18px;
+      margin-right:10px;
+    }
 
-  #midCol.affix {
-    position:static;
-  }
+    #midCol.affix-bottom {
+      position:static;
+    }
 
-  @font-face {
-    font-family: 'Glyphicons Halflings';
-    src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot');
-    src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
-    url('bootstrap-dist/fonts/glyphicons-halflings-regular.woff') format('woff'), 
-    url('bootstrap-dist/fonts/glyphicons-halflings-regular.ttf') format('truetype'), 
-    url('bootstrap-dist/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-  }
-  .navbar-input-group {
-    font-size: 0px; /*removes whitespace between button and input*/
-  }
+    #midCol.affix {
+      position:static;
+    }
 
-  .navbar-input-group input {
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-  }
-  .navbar-input-group .btn {
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-left: 0px;
-  }
-  .pager {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-  }
+    @font-face {
+      font-family: 'Glyphicons Halflings';
+      src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot');
+      src: url('bootstrap-dist/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
+      url('bootstrap-dist/fonts/glyphicons-halflings-regular.woff') format('woff'), 
+      url('bootstrap-dist/fonts/glyphicons-halflings-regular.ttf') format('truetype'), 
+      url('bootstrap-dist/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+    }
+    .navbar-input-group {
+      font-size: 0px; /*removes whitespace between button and input*/
+    }
+
+    .navbar-input-group input {
+      border-top-right-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
+    .navbar-input-group .btn {
+      border-top-left-radius: 0px;
+      border-bottom-left-radius: 0px;
+      border-left: 0px;
+    }
+    .pager {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      margin-right: 0px;
+      margin-left: 0px;
+    }
 
 
-  .table {
-    font-size: .85em;
-  }
+    .table {
+      font-size: .85em;
+    }
 
 
-  /*dropdown hover*/
-  ul.nav li.dropdown:hover > ul.dropdown-menu {
-    display: block;    
-  }
-  .input-group-addon {
-    background-color: #505050;
-  }
+    /*dropdown hover*/
+    ul.nav li.dropdown:hover > ul.dropdown-menu {
+      display: block;    
+    }
+    .input-group-addon {
+      background-color: #505050;
+    }
 
-  .mini-submenu{
-    display:none;  
-    background-color: rgba(0, 0, 0, 0.6);  
-    border: 1px solid rgba(0, 0, 0, 0.9);
-    border-radius: 4px;
-    padding: 9px;  
-    /*position: relative;*/
-    width: 42px;
+    .mini-submenu{
+      display:none;  
+      background-color: rgba(0, 0, 0, 0.6);  
+      border: 1px solid rgba(0, 0, 0, 0.9);
+      border-radius: 4px;
+      padding: 9px;  
+      /*position: relative;*/
+      width: 42px;
 
-  }
+    }
 
-  .mini-submenu:hover{
-    cursor: pointer;
-  }
+    .mini-submenu:hover{
+      cursor: pointer;
+    }
 
-  .mini-submenu .icon-bar {
-    border-radius: 1px;
-    display: block;
-    height: 2px;
-    width: 22px;
-    margin-top: 3px;
-  }
+    .mini-submenu .icon-bar {
+      border-radius: 1px;
+      display: block;
+      height: 2px;
+      width: 22px;
+      margin-top: 3px;
+    }
 
-  .mini-submenu .icon-bar {
-    background-color: #999;
-  }
+    .mini-submenu .icon-bar {
+      background-color: #999;
+    }
 
-  #slide-submenu{
-    background: rgba(0, 0, 0, 0.45);
-    display: inline-block;
-    padding: 0 8px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+    #slide-submenu{
+      background: rgba(0, 0, 0, 0.45);
+      display: inline-block;
+      padding: 0 8px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
 
-  .announcement-heading {
-    font-size: 35px;
-    margin: 0;
-  }
+    .announcement-heading {
+      font-size: 35px;
+      margin: 0;
+    }
 
-  .announcement-text,  {
-    margin: 0;
-    font-size: 12px;
+    .announcement-text,  {
+      margin: 0;
+      font-size: 12px;
 
-  }
-  .announcement-bottom {
-    font-size: 14px;
-  }
+    }
+    .announcement-bottom {
+      font-size: 14px;
+    }
 
-  .sidebar {
-    padding-left: 40px;
-  }
+    .sidebar {
+      padding-left: 40px;
+    }
 
 /*
  * Global add-ons
@@ -129,13 +148,26 @@
   border-bottom: 1px solid #eee;
 }
 
-
+/*#mynav li.active a {background-color:red;}*/
 /*
  * Sidebar
  */
 
  /* Hide for mobile, show later */
  @media (min-width: 768px) {
+
+  #mynav.affix-top {
+    position: static;
+    margin-top:30px;
+    width:228px;
+  }
+  
+  #mynav.affix {
+    position: fixed;
+    top:70px;
+    width:228px;
+  }
+
   .affix,.affix-top,#midCol.affix,#midCol.affix-top {
     position:static;
   }
