--- a/resources/stage/web/userdashboard.css
+++ b/resources/stage/web/userdashboard.css
@@ -11,8 +11,13 @@
      margin-right: 18px;
 
      }*/
+     img {
+      width:  auto;
+      height: auto;
 
-     .nav-list {
+    }
+
+    .nav-list {
       width: 228px;
       margin: 30px 0 0;
       padding: 0;
@@ -276,7 +281,7 @@
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
-  background-color: #777;
+  background-color: #222222;
 }
 .carousel-inner > .item > img {
   position: absolute;
