--- a/resources/stage/web/carousel.css
+++ b/resources/stage/web/carousel.css
@@ -1,4 +1,4 @@
-/* GLOBAL STYLES
+* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
 
