changing creators funds back

--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -12,11 +12,11 @@
 
      }*/
 
-     .btn-default {
+/*     .btn-default {
 
       position:relative; 
       bottom:0;
-     }
+     }*/
      img {
       width:  auto;
       height: auto;
