--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -190,13 +190,13 @@
     #mynav.affix-top {
     position: static;
     margin-top:30px;
-    width:300px;
+    width:auto;
   }
   
   #mynav.affix {
     position: fixed;
     top:70px;
-    width:300px;
+    width:auto;
   }
 }
  /* Hide for mobile, show later */
