--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -20,7 +20,7 @@
       img {
         width:  auto;
         height: 100%;
-        vertical-align: bottom;
+        vertical-align: middle;
         /*horizontal-align: middle;*/
       }
 
