--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -22,9 +22,13 @@
         width:  auto;
         height: 100%;
         vertical-align: middle;
-        
-        margin: 0 auto;
+
         /*horizontal-align: middle;*/
+      }
+      .center img {
+        display:block ;
+        margin-left:auto ;
+        margin-right:auto ;
       }
 
 
