--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -25,11 +25,10 @@
 
         /*horizontal-align: middle;*/
       }
-      .center img {
-        display:block ;
-        margin-left:auto ;
-        margin-right:auto ;
+      .carousel-inner > .item > img {
+        margin: 0 auto;
       }
+
 
 
       .nav-list {
