--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -323,7 +323,10 @@
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
-  -webkit-filter: blur(5px);
+
+}
+.carousel-surround-caption {
+    -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
