--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -325,12 +325,12 @@
   z-index: 10;
 
 }
-.carousel-surround-caption {
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+.blur {
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
 }
 
 /* Declare heights because of positioning of img element */
