--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -326,11 +326,11 @@
 
 }
 .blur {
-/*  -webkit-filter: blur(0.5px);
-  -moz-filter: blur(0.5px);
-  -o-filter: blur(0.5px);
-  -ms-filter: blur(0.5px);
-  filter: blur(0.5px);*/
+  -webkit-filter: blur(0.7px);
+  -moz-filter: blur(0.7px);
+  -o-filter: blur(0.7px);
+  -ms-filter: blur(0.7px);
+  filter: blur(0.7px);
 }
 
 /* Declare heights because of positioning of img element */
