--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -84,7 +84,7 @@
         border-bottom-left-radius: 0px;
         border-left: 0px;
       }
-      .pager {
+      .pager .navbar-default {
         margin-top: 0px;
         margin-bottom: 0px;
         margin-right: 0px;
