--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -224,8 +224,12 @@
     position:static;
     }*/
 
-    .navbar {
+    .navbar .navbar-default{
       height: 60px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      margin-right: 0px;
+      margin-left: 0px;
     }
     .sidebar {
       position: fixed;
