--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -90,6 +90,8 @@
         margin-right: 0px;
         margin-left: 0px;
       }
+      .navbar-nav > li > a {padding-top:10px !important; padding-bottom:10px !important;}
+      .navbar {min-height:40px !important}
 
 
       .table {
