--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -220,14 +220,15 @@
   /* Hide for mobile, show later */
   @media (min-width: 768px) {
 
-
+    .navbar-nav > li > a {padding-top:0px !important; padding-bottom:0px !important;}
+    .navbar {min-height:60px !important}
 
 
 /*  .affix,.affix-top,#midCol.affix,#midCol.affix-top {
     position:static;
     }*/
 
-    .pager .navbar .navbar-default .nav body > nav .navbar .navbar-default .navbar-nav {
+    .pager .navbar .navbar-default .nav body > nav .navbar .navbar-default .navbar-nav,  {
       height: 60px;
       margin-top: 0px;
       margin-bottom: 0px;
