--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -220,8 +220,7 @@
   /* Hide for mobile, show later */
   @media (min-width: 768px) {
 
-    .navbar-nav > li > a {padding-top:0px !important; padding-bottom:0px !important;}
-    .navbar {min-height:60px !important}
+
 
 
 /*  .affix,.affix-top,#midCol.affix,#midCol.affix-top {
@@ -230,6 +229,7 @@
 
     .pager .navbar .navbar-default .nav body > nav .navbar .navbar-default .navbar-nav,  {
       height: 60px;
+      max-height:60px !important;
       margin-top: 0px;
       margin-bottom: 0px;
       margin-right: 0px;
