--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -84,15 +84,12 @@
         border-bottom-left-radius: 0px;
         border-left: 0px;
       }
-      .pager .navbar .navbar-default .nav body > nav .navbar .navbar-default .navbar-nav{
+      .pager {
         margin-top: 0px;
         margin-bottom: 0px;
         margin-right: 0px;
         margin-left: 0px;
-        padding-top: 0px;
-        padding-bottom: 0px;
       }
-
 
 
       .table {
@@ -227,15 +224,8 @@
     position:static;
     }*/
 
-    .pager .navbar .navbar-default .nav body > nav .navbar .navbar-default .navbar-nav,  {
+    .navbar {
       height: 60px;
-      max-height:60px !important;
-      margin-top: 0px;
-      margin-bottom: 0px;
-      margin-right: 0px;
-      margin-left: 0px;
-      padding-top: 0px;
-      padding-bottom: 0px;
     }
     .sidebar {
       position: fixed;
@@ -329,6 +319,7 @@
 .carousel {
   height: 400px;
   margin-bottom: 60px;
+  margin-top: -15px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
