--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -383,6 +383,6 @@
 .carousel-body {
   padding-bottom: 40px;
   color: #DBDBDB; ;
-  background-color: #222222;
+  /*background-color: #222222;*/
 }
 
