--- a/resources/testweb/userdashboard.css
+++ b/resources/testweb/userdashboard.css
@@ -382,7 +382,7 @@
 
 .carousel-body {
   padding-bottom: 40px;
-  color: #DBDBDB;
-  background-color: #222222;
+/*  color: #DBDBDB;
+  background-color: #222222;*/
 }
 
